--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.99"
+clap = { version = "4.5.47", features = ["derive"] }
 ipnetwork = "0.21.1"
 reqwest = { version = "0.12.23", features = ["json", "gzip"] }
 serde = { version = "1.0.225", features = ["derive"] }
